# orthanc-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  docker-compose.yml  integration_test.sh  orthanc.json  release.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  test.yml
scripts/: cleanup_orthanc.sh  populate_orthanc.sh  update-versions.sh
src/: client.rs  entity.rs  error.rs  lib.rs  models.rs  utils.rs
tests/: lib.rs  test.rs  test_client.rs  test_e2e.rs
