[package]
name = "orthanc"
description = "Client for Orthanc REST API"
version = "0.4.0"
authors = ["Andrii Yurchuk <ay@mntw.re>"]
edition = "2018"
repository = "https://github.com/Ch00k/orthanc-rs"
homepage = "https://github.com/Ch00k/orthanc-rs"
keywords = ["api", "orthanc", "rest", "client", "dicom"]
categories = ["api-bindings"]
readme = "README.md"
license = "Unlicense"
autotests = false

[dependencies]
bytes = "0.5"
chrono = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
httpmock = "0.4"
maplit = "1.0"
regex = "1.3"
zip = "0.5"

[[test]]
name = "integration"
path = "tests/test.rs"
