[package]
name = "orthanc"
description = "Client for Orthanc REST API"
version = "0.8.0"
authors = ["Andrii Yurchuk <ay@mntw.re>"]
edition = "2018"
repository = "https://github.com/Ch00k/orthanc-rs"
homepage = "https://github.com/Ch00k/orthanc-rs"
keywords = ["api", "orthanc", "rest", "client", "dicom"]
categories = ["api-bindings"]
readme = "README.md"
license = "Unlicense"
autotests = false

[dependencies]
bytes = "0.5"
chrono = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.8"

[dev-dependencies]
dicom-object = "0.4"
httpmock = "0.4"
maplit = "1.0"
regex = "1.4"
zip = "0.5"

[[test]]
name = "e2e"
path = "tests/test_e2e.rs"

[[test]]
name = "client"
path = "tests/test_client.rs"
